--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.1"
   }
 }
